<resources>

    <string name="app_name">CookingMates</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments (auto generated by Android Studio)) -->
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>

    <!-- Strings used for menu -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="find_cooking_mates">Find Cooking Mates</string>
    <string name="illegal">This feature is not allowed for kids</string>
    <string name="description">Group 17 made CookingMates for DBL App Development Lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Proin dapibus vel massa a cursus. Praesent
        porta tortor eu massa tempor imperdiet. Proin porta risus in sapien porta, ac hendrerit
        eros bibendum. Proin vel libero no problem libero. Curabitur accumsan vestibulum diam sit amet
        elementum. Nam elementum turpis eu mauris mattis pretium. Pellentesque vehicula orci in
        ipsum pharetra, eget volutpat eros posuere. Curabitur quis volutpat odio, molestie auctor
        orci. Sed non leo turpis. Nullam et pulvinar risus, et consectetur urna. Sed et pulvinar
        sapien, tincidunt hendrerit leo. Nullam viverra, risus nec ornare facilisis, ex lectus
        euismod velit, tincidunt feugiat quam ligula quis diam. Nullam et risus sed tortor semper
        pretium. Curabitur non feugiat enim. Suspendisse vel orci ullamcorper, gravida eros
        mattis, dignissim leo.</string>
    <string name="newAcc">New to CookingMates? Create account</string>

    <!-- Strings used for account management -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="age">Age</string>
    <string name="email">Email Address</string>
    <string name="delete">Delete Account</string>
    <string name="adultorchild">Adult or Child:</string>

    <string-array name="account_types">
        <item>Cook</item>
        <item>Not Cook</item>
    </string-array>

    <!-- Strings used for recipe creation -->
    <string name="edit_title">Enter a title</string>
    <string name="edit_description">Enter a description</string>
    <string name="ingredients">Ingredients:</string>
    <string name="edit_ingredient">Ingredient</string>
    <string name="button_add_ingredient">Add Ingredient</string>
    <string name="recipe_description">Description:</string>
    <string name="nr_people">Number of people:</string>
    <string name="edit_nr_people">0</string>
    <string name="tags_header">Tags: (e.g. healthy,sweet)</string>
    <string name="edit_tags">Tag</string>
    <string name="button_send">Search Recipe</string>
    <string name="button_create">Create Recipe</string>
    <string name="button_image">Import Image</string>
    <string-array name="units">
        <item>g</item>
        <item>mL</item>
        <item>-</item>
    </string-array>
    <string name="tags">Tags:</string>
    <string name="review">Reviews:</string>
    <string name="stars">Stars</string>
    <string name="rating"> Rate: </string>
    <string name="button_rating">Submit Rating</string>
    <string name="edit_review">Review</string>
    <string name="button_review">Submit Review</string>

    <string name="search_name">Search on name</string>
    <string name="search_tag">Search on tag</string>
    <string name="search_ingredient">Search on ingredient</string>

    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="search_bar">Search...</string>
</resources>